--- a/project2/index.html
+++ b/project2/index.html
@@ -6,7 +6,7 @@
 <title></title>
 </head>
 <body>
-	<audio controls autoplay>
+	<audio autoplay>
 		<source src="I just made a ringtone for you.mp3" type="audio/mpeg">
 	</audio>
 <nav>
