--- a/project2/index.html
+++ b/project2/index.html
@@ -7,6 +7,8 @@
 </head>
 <body>
 	<audio autoplay>
+		<source src="I just made a ringtone for you.mp3" type="audio/mpeg">
+	</audio>
 	<audio loop>
 		<source src="I just made a ringtone for you.mp3" type="audio/mpeg">
 	</audio>
