--- a/mylove/index.html
+++ b/mylove/index.html
@@ -44,7 +44,7 @@
                 </div>
                 <div id="clock-box">
                     <span class="STYLE1"></span><font color="#FF0000">Anh <3 Em</font>
-<span class="STYLE1"> Time of love...</span>
+<span class="STYLE1"> Tớ đã yêu cậu được: </span>
                   <div id="clock"></div>
               </div>
                 <canvas id="canvas" width="1100" height="680"></canvas>
