--- a/mylove/index.html
+++ b/mylove/index.html
@@ -43,7 +43,7 @@
       </div>
                 </div>
                 <div id="clock-box">
-                    <span class="STYLE1"></span><font color="#FF0000">Anh <3 Em</font>
+                    <span class="STYLE1"></span><font color="#FF0000">Tớ yêu cậu <3,</font>
 <span class="STYLE1"> Tớ đã yêu cậu được: </span>
                   <div id="clock"></div>
               </div>
