--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>aaaaa</title>
+    <title>Test</title>
 </head>
 <style type="text/css">
     html, body{ background-color:#40958f; } 
